Removed illegal access warnings